updated locale to search in relative path

--- a/app/locale/de_DE/LC_MESSAGES/lorryWeb-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorryWeb-de_DE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lorry\n"
 "POT-Creation-Date: 2013-05-09 19:04+0100\n"
-"PO-Revision-Date: 2013-05-09 19:05+0100\n"
+"PO-Revision-Date: 2013-05-10 16:38+0100\n"
 "Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -14,10 +14,8 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "X-Poedit-Bookmarks: -1,6,-1,-1,-1,-1,-1,-1,-1,-1\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-SearchPath-0: D:\\xampp\\htdocs\\lorry\\src\n"
-"X-Poedit-SearchPath-1: D:\\xampp\\htdocs\\lorry\\app\\cache\n"
-"X-Poedit-SearchPath-2: C:\\xampp\\htdocs\\lorry\\src\n"
-"X-Poedit-SearchPath-3: C:\\xampp\\htdocs\\lorry\\app\\cache\n"
+"X-Poedit-SearchPath-0: ../../../../src\n"
+"X-Poedit-SearchPath-1: ../../../cache/twig\n"
 
 #: C:\xampp\htdocs\lorry\src/Lorry/Environment.php:41
 msgid "Development version."
