changed localisation textdomain from lorryWeb to lorry

--- a/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: lorry-web\n"
+"Project-Id-Version: lorry\n"
 "POT-Creation-Date: 2013-05-20 15:32+0100\n"
-"PO-Revision-Date: 2013-05-20 15:32+0100\n"
-"Last-Translator: Benedict Etzel <benedict.etzel@gmail.com>\n"
+"PO-Revision-Date: 2013-05-21 13:25+0100\n"
+"Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12,6 +12,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-Bookmarks: -1,6,-1,-1,-1,-1,-1,-1,-1,-1\n"
+"Language: de-DE\n"
 "X-Poedit-SearchPath-0: D:\\xampp\\htdocs\\lorry\\src\n"
 "X-Poedit-SearchPath-1: D:\\xampp\\htdocs\\lorry\\app\\cache\n"
 "X-Poedit-SearchPath-2: C:\\xampp\\htdocs\\lorry\\src\n"
