--- a/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: lorry\n"
-"POT-Creation-Date: 2014-02-15 01:49+0100\n"
-"PO-Revision-Date: 2014-02-15 01:54+0100\n"
+"POT-Creation-Date: 2014-02-15 02:01+0100\n"
+"PO-Revision-Date: 2014-02-15 02:03+0100\n"
 "Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -978,7 +978,7 @@ msgid ""
 msgstr ""
 
 #: /home/benedict/public_html/lorry/app/cache/twig/67/1b/f8a8e523b8f7d7ef2b79301aa4af87deced5464e79fcb0f4eb9e73721995.php:142
-#: /home/benedict/public_html/lorry/app/cache/twig/78/75/82461af1b2a306689171743117160d82375814083aa5e2546f5fd55e646b.php:210
+#: /home/benedict/public_html/lorry/app/cache/twig/78/75/82461af1b2a306689171743117160d82375814083aa5e2546f5fd55e646b.php:212
 msgid "Visit the publishing portal"
 msgstr "Veröffentlichungs-Portal öffnen"
 
@@ -1204,6 +1204,7 @@ msgid "Categories"
 msgstr "Kategorien"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/c5/4d/ed13adfb76107d4f0c536f7f50b8858dbe010a7c761138ba3101f993ec03.php:199
+#: /home/benedict/public_html/lorry/app/cache/twig/e3/83/87911c79059dda5b7542d652c01066274ddab31d15450fc495b700255c3c.php:25
 msgid "Community"
 msgstr "Community"
 
@@ -1320,6 +1321,22 @@ msgstr "Erweiterungsseite betrachten"
 #: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:265
 msgid "You have not released an addon yet."
 msgstr "Du hast noch keine Erweiterung veröffentlicht."
+
+#: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:285
+msgid "Welcome to the publishing portal!"
+msgstr "Willkommen beim Veröffentlichungs-Portal!"
+
+#: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:289
+msgid ""
+"Here you can publish your addons and make them available to your fans. Click "
+"the button below to get started."
+msgstr ""
+"Hier kannst du deine Erweiterungen veröffentlichungen und sie deinen Fans "
+"zugänglich machen. Klicke auf den untenliegenden Knopf, um zu beginnen."
+
+#: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:293
+msgid "Create a new addon"
+msgstr "Neue Erweiterung anlegen"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d1/7e/348422e4a226503fd4ce4c8a274c174a990659b402460c910d7445842103.php:48
 msgid ""
@@ -1456,10 +1473,6 @@ msgstr "Erweiterungen der Woche"
 
 #~ msgid "What is this all about?"
 #~ msgstr "Was ist das hier für eine Seite?"
-
-#, fuzzy
-#~ msgid "create a new addon"
-#~ msgstr "Erweiterung anlegen"
 
 #~ msgid "Development version."
 #~ msgstr "Entwicklungsversion."
