--- a/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lorry\n"
 "POT-Creation-Date: 2014-02-15 02:04+0100\n"
-"PO-Revision-Date: 2014-02-15 02:05+0100\n"
+"PO-Revision-Date: 2014-02-15 02:07+0100\n"
 "Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -1280,6 +1280,8 @@ msgid ""
 "Registering takes only a few moments and allows you to participate in the "
 "Clonk community."
 msgstr ""
+"Eine Registrierung benötigt nur wenige Momente und ermöglicht es dir, an der "
+"Clonk-Community teilzunehmen."
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:45
 msgid "New addon"
