slightly update publishing portal

--- a/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lorry\n"
 "POT-Creation-Date: 2014-02-15 02:21+0100\n"
-"PO-Revision-Date: 2014-02-15 02:21+0100\n"
+"PO-Revision-Date: 2014-02-15 11:34+0100\n"
 "Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -979,7 +979,7 @@ msgstr ""
 #: /home/benedict/public_html/lorry/app/cache/twig/67/1b/f8a8e523b8f7d7ef2b79301aa4af87deced5464e79fcb0f4eb9e73721995.php:142
 #: /home/benedict/public_html/lorry/app/cache/twig/78/75/82461af1b2a306689171743117160d82375814083aa5e2546f5fd55e646b.php:214
 msgid "Visit the publishing portal"
-msgstr "Veröffentlichungs-Portal öffnen"
+msgstr "Veröffentlichungsportal öffnen"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/67/1b/f8a8e523b8f7d7ef2b79301aa4af87deced5464e79fcb0f4eb9e73721995.php:149
 msgid "Build the next Clonk"
@@ -1329,7 +1329,7 @@ msgstr "Du hast noch keine Erweiterung veröffentlicht."
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:285
 msgid "Welcome to the publishing portal!"
-msgstr "Willkommen beim Veröffentlichungs-Portal!"
+msgstr "Willkommen beim Veröffentlichungsportal!"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d0/95/e6abd85b47c21a19824deba6aea8ce16c0b7872e7438eee643513cc6ebf1.php:289
 msgid ""
@@ -1345,7 +1345,7 @@ msgstr "Neue Erweiterung anlegen"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d1/7e/348422e4a226503fd4ce4c8a274c174a990659b402460c910d7445842103.php:47
 msgid "This is the publishing portal"
-msgstr "Dies ist das Veröffentlichungs-Portal"
+msgstr "Dies ist das Veröffentlichungsportal"
 
 #: /home/benedict/public_html/lorry/app/cache/twig/d1/7e/348422e4a226503fd4ce4c8a274c174a990659b402460c910d7445842103.php:51
 msgid ""
